// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCore kind:primary href:# light:false disabled 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={true}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:false focused 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:false hovered 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:false pressed 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#6645b0",
      },
      "color": "#1b50b3",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:true disabled 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={true}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#ffffff",
      },
      "color": "#ffffff",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:true focused 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#ffffff",
      },
      "color": "#ffffff",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:true hovered 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#ffffff",
      },
      "color": "#ffffff",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:# light:true pressed 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#b5cefb",
      },
      "color": "#b5cefb",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false disabled 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={true}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false focused 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false hovered 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:false pressed 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#6645b0",
      },
      "color": "#1b50b3",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true disabled 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={true}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#ffffff",
      },
      "color": "#ffffff",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true focused 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#ffffff",
      },
      "color": "#ffffff",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true hovered 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#ffffff",
      },
      "color": "#ffffff",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:primary href:#non-existent-link light:true pressed 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#b5cefb",
      },
      "color": "#b5cefb",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:# light:false disabled 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={true}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#21242c",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:# light:false focused 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:# light:false hovered 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:# light:false pressed 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#6645b0",
      },
      "color": "#1b50b3",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false disabled 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={true}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#21242c",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false focused 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false hovered 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#8755ee",
      },
      "color": "#1865f2",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "underline currentcolor solid",
    }
  }
>
  Click me
</a>
`;

exports[`LinkCore kind:secondary href:#non-existent-link light:false pressed 1`] = `
<a
  className=""
  data-test-id={undefined}
  disabled={false}
  href="#"
  style={
    Object {
      ":visited": Object {
        "color": "#6645b0",
      },
      "color": "#1b50b3",
      "cursor": "pointer",
      "outline": "none",
      "textDecoration": "none",
    }
  }
>
  Click me
</a>
`;
